ugly version that works

--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
         ======================== -->
 
         <!-- Add your JS here -->
-        <script src="js/jqueryVersion.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
