--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         ======================== -->
 
         <!-- Add your JS here -->
-        <script src="js/jqueryVersion.js"></script>
+        <script src="js/oop.js"></script>
     </body>
 </html>
+
